--- a/kss/builder/decanter/kss-assets/css/kss.css
+++ b/kss/builder/decanter/kss-assets/css/kss.css
@@ -1562,6 +1562,24 @@ body {
     .main-nav li:last-child > a {
       margin: 0; }
 
+#kssref-components-main-navigation .kss-modifier__example:nth-child(3) nav {
+  z-index: 9699; }
+
+#kssref-components-main-navigation .kss-modifier__example:nth-child(6) nav {
+  z-index: 9399; }
+
+#kssref-components-main-navigation .kss-modifier__example:nth-child(9) nav {
+  z-index: 9099; }
+
+#kssref-components-main-navigation .kss-modifier__example:nth-child(12) nav {
+  z-index: 8799; }
+
+#kssref-components-main-navigation .kss-modifier__example:nth-child(15) nav {
+  z-index: 8499; }
+
+#kssref-components-main-navigation .kss-modifier__example:nth-child(18) nav {
+  z-index: 8199; }
+
 .kss-markup {
   overflow: scroll;
   margin: 30px 0;
